fix(modal): bump modal z-index (#451)

--- a/packages/modal/src/styles/Modal.css
+++ b/packages/modal/src/styles/Modal.css
@@ -15,7 +15,7 @@
 }
 
 .Modal {
-  z-index: 10000;
+  z-index: 30000;
   position: fixed;
   top: 0;
   right: 0;
